# RegresionSimbolica-PG

./: .gitignore  AlphaSymbolic_Colab_Updated.ipynb  AlphaSymbolic_Unified_Colab.ipynb  LICENSE  README.md  benchmark_results.txt  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_final.txt  debug_model_load.py  pytest.ini  repro_diagnosis.py  test_output.txt
AlphaSymbolic/: .gitignore  AlphaSymbolic_Colab.ipynb  AlphaSymbolic_Colab_Updated.ipynb  AlphaSymbolic_Unified_Colab.ipynb  README.md  __init__.py  app.py  app_core.py  app_search.py  app_training.py  beam_search.py  benchmark_gp_vs_gpu.py  benchmark_profile.py  brute_recover.py  ccc.py  check_gpu_duplication.py  debug_decoding.py  debug_eval.py  detect_pattern.py  environment.py  eval_gen7.py  evaluate_sota.py  feynman_results.csv  generate_colab_notebook.py  generate_csv.py  generate_notebook.py  god.py  gpu_eval.py  grammar.py  infinite_search.py  mcts.py  optimize_constants.py  pareto.py  pattern_memory.json  pattern_memory_1.json  pyproject.toml  quick_gpu_test.py  reproduce_hos.py  reproduce_inf.py  reproduce_issue.py  (+20 more)
AlphaSymbolic/.agent/: implementation_plan_gpu.md
AlphaSymbolic/AlphaSymbolic.egg-info/: PKG-INFO
AlphaSymbolic/benchmarks/: benchmark_engines.py  benchmark_islands.py  benchmark_vs_pysr.py
AlphaSymbolic/core/: environment.py  gp_bridge.py  gpu_engine.py  grammar.py  loss.py  model.py
AlphaSymbolic/core/gpu/: __init__.py  benchmark.py  config.py  cuda_loader.py  cuda_vm.py  cupy_vm.py  engine.py  ensemble.py  evaluation.py  formatting.py  gpu_simplifier.py  grammar.py  library_learning.py  operators.py  optimization.py  pareto.py  pattern_memory.py  simplification.py  sniper.py
AlphaSymbolic/core/gpu/cuda/: .gitignore  backward_kernels.cu  best_tracker_kernels.cu  bindings.cpp  build_extension.bat  build_native.bat  check_log.py  debug_log.py  decoder.cpp  diversity_kernels.cu  find_lnk.py  fused_pso_kernels.cu  genrand_kernels.cu  lbfgs_kernels.cu  pso_kernels.cu  rpn_kernels.cu  setup.py  simplify_kernels.cu  test_decoder_native.py  test_genrand_weights.py  test_phase2.py  test_phase3.py  test_phase4.py
AlphaSymbolic/core/gpu/cuda/rpn_cuda.egg-info/: PKG-INFO
AlphaSymbolic/data/: __init__.py  augmentation.py  benchmark_data.py  expanded_benchmarks.py  feynman_data.py  multivariable_data.csv  pattern_memory.json  pattern_memory.py  pattern_memory_0.json  synthetic_data.py
AlphaSymbolic/debug/: debug_discrepancy.py  eval_gen8.py  eval_gen8_new.py  eval_pena_usuga.py  eval_seed.py  find_correct_seed.py  optimize_seed.py  repro_nan.py  smooth_formula.py  verify_persistence.py  verify_simple.py
AlphaSymbolic/experiments/: ccc.py  eval_gen86.py  eval_sota_gen69.py  solve_n_queens.py  unified_theory_queens.py
AlphaSymbolic/scripts/: analyze_gpu_metrics.py  benchmark_gpu_console.py  benchmark_vs_pysr.py  generate_colab_notebook.py  infinite_search.py  profile_gpu_engine.py  reproduce_simplifier_error.py  run_gpu_benchmark.py  run_gpu_console.py  test_individual.py  verify_island_isolation.py  verify_migration.py  verify_rmse.py
AlphaSymbolic/search/: basic_search.py  beam_search.py  hybrid_search.py  mcts.py  pareto.py  phase_manager.py  search.py  search_pro.py
AlphaSymbolic/tests/: benchmark_curriculum.py  conftest.py  debug_loss.py  test_batch_generation.py  test_beam_diversity.py  test_convergence.py  test_cuda.py  test_cupy.py  test_data_balance.py  test_data_generator.py  test_evaluation.py  test_feedback_logic.py  test_gen_v2.py  test_gp_multivariable.py  test_gpu_dedup.py  test_gpu_engine.py  test_gpu_engine_stability.py  test_gpu_features.py  test_gpu_hybrid_full.py  test_gpu_log_transform.py  test_gpu_migration.py  test_gpu_pareto.py  test_gpu_simplification.py  test_gpu_stability.py  test_islands.py  test_jit.py  test_mask.py  test_mcts_integration.py  test_mcts_smoke.py  test_model_init.py  test_model_selector.py  test_neural_integration.py  test_new_vm.py  test_normalization_disabled.py  test_numba.py  test_pattern_memory.py  test_rmsle.py  test_smart_engine.py  test_system.py  test_training_logic.py  (+2 more)
AlphaSymbolic/tests/e2e/: test_app_smoke.py
AlphaSymbolic/tests/ui/: test_data_io.py  test_formatting_logging.py  test_gpu_live_callback.py  test_live_state.py
AlphaSymbolic/tools/: analyze_results.py  debug_hall_of_shame.py  generate_notebook.py  generate_report.py  merge_csvs.py  rescue_data.py  run_benchmark_feynman.py  verify_inverse_trig.py  verify_python_multivar.py  verify_seed_parsing.py
AlphaSymbolic/training/: debug_training.py  self_play.py  train.py  train_enhanced.py
AlphaSymbolic/ui/: app_benchmark.py  app_core.py  app_gpu_live.py  app_search.py  app_training.py  data_io.py  formatting.py  live_state.py  logging_utils.py  theme.py
AlphaSymbolic/utils/: benchmark_comparison.py  benchmark_runner.py  check_model.py  cpp_binding.py  data_utils.py  detect_pattern.py  gpu_eval.py  multivar.py  optimize_constants.py  simplify.py
Code/: CMakeLists.txt  GoogleColab_Project.ipynb  README.md  generate_colab_notebook.py  run.bat
Code/notebooks/: GoogleColab_Project.ipynb
Code/scripts/: run_tests.bat
Code/src/: AdvancedFeatures.cpp  AdvancedFeatures.h  AdvancedFeatures.h.temp  ExpressionTree.cpp  ExpressionTree.h  Fitness.cpp  Fitness.h  FitnessGPU.cu  FitnessGPU.cu.temp  FitnessGPU.cuh  GeneticAlgorithm.cpp  GeneticAlgorithm.h  GeneticOperators.cpp  GeneticOperators.h  Globals.h  GradientOptimizer.cpp  GradientOptimizer.h  GradientOptimizerGPU.cu  GradientOptimizerGPU.cuh  TestOperators.cpp  main.cpp
scripts/: verify_uint8_migration.py
v2.2/: CMakeLists.txt
v2.2/src/: AdvancedFeatures.h  Fitness.h
v3/: CMakeLists.txt  README.md
v3/cuda/: FitnessCuda.h  fitness_kernels.cu
v3/include/: cuda_defs.h
v3/src/: AdvancedFeatures.cpp  AdvancedFeatures.h  ExpressionTree.cpp  ExpressionTree.h  Fitness.cpp  Fitness.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  GeneticOperators.cpp  Globals.h  main.cpp
v4/: advanced_features.py  expression_tree.py  fitness.py  genetic_algorithm.py  genetic_operators.py  globals.py  main.py
v5/: expression_tree.py  (+10 more)
(+19 files in other folders)
