[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AlphaSymbolic"
version = "1.0.0"
description = "GPU-accelerated symbolic regression engine"
requires-python = ">=3.9"
dependencies = [
    "torch>=1.12.0",
    "numpy>=1.20.0",
    "sympy>=1.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]